Web: fixing broken css in history page

--- a/src/backend/bigspoon/bigspoon/assets/css/main.css
+++ b/src/backend/bigspoon/bigspoon/assets/css/main.css
@@ -438,7 +438,7 @@ p.note {
     height: 315px;
 }
 
-.active .order {
+.active .order, .item .history .order {
     overflow:scroll;
     margin-top: 0px;
     margin-bottom: 25px;
